--- a/package.json
+++ b/package.json
@@ -21,20 +21,25 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.6.13",
-    "@nestjs/core": "^7.6.13",
-    "@nestjs/mapped-types": "^0.3.0",
-    "@nestjs/platform-express": "^7.6.13",
+    "@nestjs/axios": "^3.0.0",
+    "@nestjs/common": "^10.1.3",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.1.3",
+    "@nestjs/mapped-types": "^2.0.2",
+    "@nestjs/platform-express": "^10.1.3",
+    "@nestjs/swagger": "^7.1.7",
+    "axios": "^1.4.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "joi": "^17.9.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6"
+    "rxjs": "^7.1.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.6",
-    "@nestjs/schematics": "^7.2.7",
-    "@nestjs/testing": "^7.6.13",
+    "@nestjs/cli": "^10.1.11",
+    "@nestjs/schematics": "^10.0.2",
+    "@nestjs/testing": "^10.1.3",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
