--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.1.3",
     "@nestjs/mapped-types": "^2.0.2",
+    "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.1.3",
     "@nestjs/swagger": "^7.1.7",
     "axios": "^1.4.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "joi": "^17.9.2",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.1.0"
@@ -42,6 +45,7 @@
     "@nestjs/testing": "^10.1.3",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^14.14.31",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
